Added stub book api endpoint

--- a/api/package.json
+++ b/api/package.json
@@ -4,5 +4,8 @@
   "description": "Library REST API server",
   "main": "index.js",
   "author": "Anton Mozgovyi",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.16.2"
+  }
 }
